--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,22 @@ body {
     text-wrap: balance;
   }
 }
+.overflow-y-auto::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.overflow-y-auto {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.loader {
+  border-top-color: #000;
+  animation: spin 1s linear infinite;
+}
